fix header menu. header figure. create collapse and put info

--- a/css/style.css
+++ b/css/style.css
@@ -697,8 +697,8 @@ header a.logo {display: inline-block; vertical-align: middle;line-height: 1}
 
 header .nav-holder .shape-left{
     position: absolute;
-    left: -340px;
-    top: -260px;
+    left: -390px;
+    top: -310px;
     text-align: right;
     max-width: 800px;
     -webkit-transition: all .4s ease-in-out;
@@ -710,8 +710,8 @@ header .nav-holder .shape-left{
 
 header .nav-holder .shape-right {
     position: absolute;
-    right: -400px;
-    bottom: 20px;
+    right: -500px;
+    bottom: 0px;
     -webkit-transition: all .4s ease-in-out;
     -moz-transition: all .4s ease-in-out;
     -ms-transition: all .4s ease-in-out;
@@ -3143,8 +3143,8 @@ input.inputerror, textarea.inputerror, select.inputerror {
 
     header .nav-holder .shape-left {
         position: absolute;
-        left: -280px;
-        top: -190px;
+        left: -330px;
+        top: -300px;
         text-align: right;
         max-width: 600px;
     }
